setting hover and cursor point

--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -103,6 +103,7 @@ main .bookingintroduce .introduceContent .messageDownBlock .attractionIntroduceB
   font-weight: 500;
 }
 main .bookingintroduce .introduceContent .messageDownBlock .attractionIntroduceBlock .trashcan {
+  cursor: pointer;
   position: absolute;
   width: 30px;
   height: 30px;
@@ -116,6 +117,11 @@ main .bookingintroduce .introduceContent .messageDownBlock .attractionIntroduceB
   main .bookingintroduce .introduceContent .messageDownBlock .attractionIntroduceBlock .trashcan {
     bottom: 0px;
   }
+}
+main .bookingintroduce .introduceContent .messageDownBlock .attractionIntroduceBlock .trashcan:hover {
+  opacity: 0.6;
+  background-color: rgb(217, 208, 208);
+  border-radius: 5px;
 }
 main hr {
   margin-top: 40px;
