--- a/static/css/thankyou.scss
+++ b/static/css/thankyou.scss
@@ -19,6 +19,21 @@ main{
         }
         
     }
+    .errorPage{
+        display: none;
+        width:90%;
+        height:50px;
+        margin-top: 100px;
+        font-size: 26px;
+        font-weight: 1000;
+        align-items: center;
+        justify-content: center;
+        div{
+            text-align: center;
+            color:#757575;
+        }
+
+    }
 }
 
 
