--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
 {% block css %}
-<!-- <link rel="stylesheet" href=""> -->
-<link rel="stylesheet" href="../static/css/index.css">
 {% endblock %}
 
 
@@ -22,142 +20,19 @@
             <!-- 建立搜尋表單 -->
             <div class="searchcontainer">
                 <div class="searchForm">
-                        <!-- <div class="searchItem publicart">公共藝術</div>
-                        <div class="searchItem else">其 他</div>
-                        <div class="searchItem bike">單車遊蹤</div>
-
-                        <div class="searchItem religion">宗教信仰</div>
-                        <div class="searchItem outdoor">戶外踏青</div>
-                        <div class="searchItem spring">春季活動</div>-->
                 </div>
-            </div>
-            
-            
-        
+            </div>        
         </div>
-        <!-- <div class="filmBackground"></div>
-        <div class="signinBlock">
-            <div class="signinBackground">
-                <div class="signinContent">
-                    <div class="signinTitle">登入會員帳號<i class="fa-solid fa-xmark signinClose"></i></div>
-                    <input class="signinEmail" type="email" name="" placeholder="輸入電子信箱" />
-                    <input class="signinPassword" type="password" name="" placeholder="輸入密碼" />
-                    <div class="signinBtn">登入帳戶</div>
-                    <div class="signinCreateAccount">還沒有帳戶？點此註冊</div>
-                    <div class="signinMessage">登入成功</div>
-                </div>
-            </div>
-        </div>
-
-        <div class="registerBlock">
-            <div class="registerBackground">
-                <div class="registerContent" method="POST" action="/api/user">
-                    <div class="registerTitle">註冊會員帳號<i class="fa-solid fa-xmark registerClose"></i></div>
-                    <input class="registerName" type="text" name="registerName" placeholder="輸入姓名" />
-                    <input class="registerEmail" type="email" name="registerEmail" placeholder="輸入電子信箱" />
-                    <input class="registerPassword" type="password" name="registerPassword" placeholder="輸入密碼" />
-                    <div class="registerBtn">註冊新帳戶</div>   
-                    <div class="registerSignInTo">已經有帳戶了？點此登入</div>
-                    <div class="registerMessage">註冊失敗，點此重新註冊</div>
-                </div>
-            </div>
-        </div> -->
-
-
-
     </section>
 
     
     
 
-    <section class="container-twelve"><!--1-->
-        <div class="container-block"><!--2-->
-            <!-- <div class="item">
-                <div class="img-block apple">
-                    -- <img class="img-block" src="../static/img/IMG_3463.jpg">
-                    <p>123456</p> --
-                </div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                --設定多個屬性讓他去抓--
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div>
-
-            <div class="item">
-                <div class="img-block apple"></div>
-                <div class="sort"></div>
-
-            </div> -->
-
-
-
-
-
-
-        </div>
-
-
+    <section class="container-twelve">
+        <div class="container-block"></div>
     </section>
     <!-- <div class="container" id="container"></div> -->
+    
     <div class="loading">
         <div class="ball"></div>
         <div class="ball"></div>
