--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -19,6 +19,10 @@
         <div class="emailBlock">信箱：<i class="contactEmail"></i></div>
         <div class="phoneBlock">電話：<i class="contactPhone"></i></div>
     </section>
+
+    <section class="errorPage">
+        <div class="errorResult"></div>
+    </section>
 </main>
 
 
