--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -20,7 +20,7 @@ body nav div {
   display: flex;
   background-color: #FFFFFF;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1250px) {
   body nav div {
     width: 90%;
   }
@@ -86,195 +86,6 @@ body main {
   width: 100%;
   height: 100%;
 }
-body main .filmBackground {
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  z-index: 100;
-  position: fixed;
-  top: 0;
-  opacity: 0.25;
-  display: none;
-}
-body main .signinBlock {
-  width: 100%;
-  height: 275px;
-  margin-top: 26px;
-  position: fixed;
-  z-index: 101;
-  display: none;
-  justify-content: center;
-}
-body main .signinBlock .signinBackground {
-  width: 340px;
-  height: 100%;
-  background-color: #448899;
-  border-radius: 6px;
-}
-body main .signinBlock .signinBackground .signinContent {
-  width: 100%;
-  height: 265px;
-  margin-top: 10px;
-  background-color: #FFFFFF;
-  border-radius: 0 0 6px 6px;
-}
-body main .signinBlock .signinBackground .signinContent .signinTitle {
-  position: relative;
-  top: 15px;
-  width: 100%;
-  height: 27px;
-  display: flex;
-  justify-content: center;
-  color: #666666;
-  font-weight: 1000;
-  font-size: 24px;
-}
-body main .signinBlock .signinBackground .signinContent .signinClose {
-  position: relative;
-  left: 75px;
-}
-body main .signinBlock .signinBackground .signinContent input {
-  width: 310px;
-  height: 47px;
-  left: 15px;
-  border-radius: 5px;
-  padding: 15px;
-  border: 1px Gray solid;
-  font-weight: 600;
-}
-body main .signinBlock .signinBackground .signinContent .signinEmail {
-  position: relative;
-  top: 30px;
-}
-body main .signinBlock .signinBackground .signinContent .signinPassword {
-  position: relative;
-  top: 40px;
-}
-body main .signinBlock .signinBackground .signinContent .signinBtn {
-  position: relative;
-  top: 50px;
-  left: 15px;
-  width: 310px;
-  height: 47px;
-  background-color: #448899;
-  border-radius: 6px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 1000px;
-  color: white;
-}
-body main .signinBlock .signinBackground .signinContent .signinCreateAccount {
-  position: relative;
-  top: 60px;
-  color: #666666;
-  display: flex;
-  justify-content: center;
-  font-size: 16px;
-  font-weight: 1000px;
-}
-body main .signinBlock .signinBackground .signinContent .signinMessage {
-  position: relative;
-  top: 40px;
-  display: none;
-  justify-content: center;
-  font-size: 16px;
-  font-weight: 1000px;
-  color: red;
-}
-body main .registerBlock {
-  width: 100%;
-  height: 332px;
-  margin-top: 26px;
-  position: fixed;
-  z-index: 101;
-  display: none;
-  justify-content: center;
-}
-body main .registerBlock .registerBackground {
-  width: 340px;
-  height: 100%;
-  background-color: #448899;
-  border-radius: 6px;
-}
-body main .registerBlock .registerBackground .registerContent {
-  width: 100%;
-  height: 322px;
-  margin-top: 10px;
-  background-color: #FFFFFF;
-  border-radius: 0 0 6px 6px;
-}
-body main .registerBlock .registerBackground .registerContent .registerTitle {
-  position: relative;
-  top: 15px;
-  width: 100%;
-  height: 27px;
-  display: flex;
-  justify-content: center;
-  color: #666666;
-  font-weight: 1000;
-  font-size: 24px;
-}
-body main .registerBlock .registerBackground .registerContent .registerClose {
-  position: relative;
-  left: 75px;
-}
-body main .registerBlock .registerBackground .registerContent input {
-  width: 310px;
-  height: 47px;
-  left: 15px;
-  border-radius: 5px;
-  padding: 15px;
-  border: 1px Gray solid;
-  font-weight: 600;
-}
-body main .registerBlock .registerBackground .registerContent .registerName {
-  position: relative;
-  top: 30px;
-}
-body main .registerBlock .registerBackground .registerContent .registerEmail {
-  position: relative;
-  top: 40px;
-}
-body main .registerBlock .registerBackground .registerContent .registerPassword {
-  position: relative;
-  top: 50px;
-}
-body main .registerBlock .registerBackground .registerContent .registerBtn {
-  position: relative;
-  top: 60px;
-  left: 15px;
-  width: 310px;
-  height: 47px;
-  background-color: #448899;
-  border-radius: 6px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 1000px;
-  color: white;
-  border: 0px;
-}
-body main .registerBlock .registerBackground .registerContent .registerSignInTo {
-  position: relative;
-  top: 70px;
-  color: #666666;
-  display: flex;
-  justify-content: center;
-  font-size: 16px;
-  font-weight: 1000px;
-}
-body main .registerBlock .registerBackground .registerContent .registerMessage {
-  position: relative;
-  top: 80px;
-  display: none;
-  justify-content: center;
-  font-size: 16px;
-  font-weight: 1000px;
-  color: red;
-}
 body main .sectionPicture {
   margin: 0 auto;
   justify-content: center;
@@ -282,7 +93,7 @@ body main .sectionPicture {
   height: 480px;
   display: flex;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1250px) {
   body main .sectionPicture {
     width: 90%;
   }
@@ -317,7 +128,7 @@ body main .sectionPicture .pictureLeft {
 @media (max-width: 750px) {
   body main .sectionPicture .pictureLeft {
     margin: 0px auto;
-    width: 100%;
+    width: 95%;
   }
 }
 body main .sectionPicture .pictureLeft .imgBackground {
@@ -338,12 +149,13 @@ body main .sectionPicture .pictureLeft .carouselBtnBlock {
   align-items: center; /* 垂直置中 */
   justify-content: space-between;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1250px) {
   body main .sectionPicture .pictureLeft .carouselBtnBlock {
     width: 100%;
   }
 }
 body main .sectionPicture .pictureLeft .carouselBtnBlock .carouselBtn {
+  cursor: pointer;
   margin: 0 10px;
   height: 36px;
   width: 36px;
@@ -369,6 +181,11 @@ body main .sectionPicture .pictureLeft .carouselBtnBlock .carouselBtn i {
     font-size: 1.2rem;
   }
 }
+body main .sectionPicture .pictureLeft .carouselBtnBlock .carouselBtn:hover {
+  opacity: 0.7;
+  background-color: rgb(62, 61, 61);
+  color: white;
+}
 body main .sectionPicture .pictureLeft .carouselUnderBlock {
   width: 100%;
   height: 12px;
@@ -378,6 +195,7 @@ body main .sectionPicture .pictureLeft .carouselUnderBlock {
   bottom: 7px;
 }
 body main .sectionPicture .pictureLeft .carouselUnderBlock .carouselInturn {
+  cursor: pointer;
   margin: 0 3px;
   height: 12px;
   width: 12px;
@@ -394,6 +212,10 @@ body main .sectionPicture .pictureLeft .carouselUnderBlock .carouselInturn .caro
   border-radius: 50%;
   background-color: black;
   display: none;
+}
+body main .sectionPicture .pictureLeft .carouselUnderBlock .carouselInturn:hover {
+  opacity: 0.5;
+  background-color: rgb(62, 61, 61);
 }
 body main .sectionPicture .pictureRight {
   width: 615px;
@@ -504,6 +326,7 @@ body main .sectionPicture .pictureRight .orderDirect .orderMessage {
   display: none;
 }
 body main .sectionPicture .pictureRight .orderDirect .orderBtn {
+  cursor: pointer;
   margin-left: 20px;
   margin-top: 25px;
   padding: 5px 20px;
@@ -514,11 +337,15 @@ body main .sectionPicture .pictureRight .orderDirect .orderBtn {
   color: white;
   border-radius: 6px 6px 6px 6px;
 }
+body main .sectionPicture .pictureRight .orderDirect .orderBtn:hover {
+  opacity: 0.8;
+  background-color: rgb(62, 61, 61);
+}
 body main hr {
   max-width: 1200px;
   margin: 0 auto;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1250px) {
   body main hr {
     width: 90%;
   }
@@ -551,7 +378,7 @@ body main .sectioncontain p {
   font-size: 16px;
   line-height: 23px;
 }
-@media (max-width: 1300px) {
+@media (max-width: 1250px) {
   body main .sectioncontain p {
     width: 90%;
   }
