--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,6 +5,8 @@
   padding: 0;
   font-family: "Noto Sans TC";
   font-style: normal;
+  border: none;
+  outline: none;
 }
 
 .filmBackground {
@@ -54,6 +56,7 @@
 .signinBlock .signinBackground .signinContent .signinClose {
   position: relative;
   left: 75px;
+  cursor: pointer;
 }
 .signinBlock .signinBackground .signinContent input {
   width: 310px;
@@ -73,6 +76,7 @@
   top: 40px;
 }
 .signinBlock .signinBackground .signinContent .signinBtn {
+  cursor: pointer;
   position: relative;
   top: 50px;
   left: 15px;
@@ -87,7 +91,12 @@
   font-weight: 1000px;
   color: white;
 }
+.signinBlock .signinBackground .signinContent .signinBtn:hover {
+  opacity: 0.8;
+  background-color: rgb(62, 61, 61);
+}
 .signinBlock .signinBackground .signinContent .signinCreateAccount {
+  cursor: pointer;
   position: relative;
   top: 60px;
   color: #666666;
@@ -95,6 +104,9 @@
   justify-content: center;
   font-size: 16px;
   font-weight: 1000px;
+}
+.signinBlock .signinBackground .signinContent .signinCreateAccount:hover {
+  color: black;
 }
 .signinBlock .signinBackground .signinContent .signinMessage {
   position: relative;
@@ -140,6 +152,7 @@
   font-size: 24px;
 }
 .registerBlock .registerBackground .registerContent .registerClose {
+  cursor: pointer;
   position: relative;
   left: 75px;
 }
@@ -165,6 +178,7 @@
   top: 50px;
 }
 .registerBlock .registerBackground .registerContent .registerBtn {
+  cursor: pointer;
   position: relative;
   top: 60px;
   left: 15px;
@@ -180,7 +194,13 @@
   color: white;
   border: 0px;
 }
+.registerBlock .registerBackground .registerContent .registerBtn:hover {
+  opacity: 0.7;
+  background-color: rgb(42, 40, 40);
+  border-radius: 5px;
+}
 .registerBlock .registerBackground .registerContent .registerSignInTo {
+  cursor: pointer;
   position: relative;
   top: 70px;
   color: #666666;
@@ -189,7 +209,11 @@
   font-size: 16px;
   font-weight: 1000px;
 }
+.registerBlock .registerBackground .registerContent .registerSignInTo:hover {
+  color: black;
+}
 .registerBlock .registerBackground .registerContent .registerMessage {
+  cursor: pointer;
   position: relative;
   top: 80px;
   display: none;
@@ -197,6 +221,9 @@
   font-size: 16px;
   font-weight: 1000px;
   color: red;
+}
+.registerBlock .registerBackground .registerContent .registerMessage:hover {
+  color: black;
 }
 
 nav {
@@ -222,7 +249,7 @@ nav div div.nav-bar-left {
   width: 50%;
 }
 nav div div.nav-bar-left p {
-  width: 100%;
+  cursor: pointer;
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 30px;
@@ -234,15 +261,20 @@ nav div div.nav-bar-left p {
     font-size: 28px;
   }
 }
+nav div div.nav-bar-left p:hover {
+  opacity: 0.6;
+  background-color: rgb(225, 220, 220);
+  color: #080707;
+  border-radius: 5px;
+}
 nav div div.nav-bar-right {
   width: 50%;
   display: flex;
   justify-content: right;
 }
 nav div div.nav-bar-right p {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-right: 20px;
+  cursor: pointer;
+  margin: 10px;
   font-size: 16px;
   display: flex;
   align-items: center; /* 垂直置中 */
@@ -252,8 +284,15 @@ nav div div.nav-bar-right p {
 }
 @media (max-width: 410px) {
   nav div div.nav-bar-right p {
-    margin-right: 10px;
+    margin: 5px;
   }
+}
+nav div div.nav-bar-right P:hover {
+  opacity: 0.6;
+  background-color: rgb(225, 220, 220);
+  color: #080707;
+  font-weight: 600;
+  border-radius: 5px;
 }
 nav div div.nav-bar-right .SigninRegister {
   display: flex;
@@ -314,16 +353,22 @@ main .page-one .text .but .search {
   font-size: 16px;
   line-height: 13px;
   color: #757575;
-  padding: 15px 10px;
-  border: none;
+  padding: 15px 30px;
   border-radius: 6px 0 0 6px;
+}
+@media (max-width: 550px) {
+  main .page-one .text .but .search {
+    padding: 15px 20px;
+  }
 }
 @media (max-width: 410px) {
   main .page-one .text .but .search {
     width: 250px;
+    padding: 15px 8px;
   }
 }
 main .page-one .text .but .icon {
+  cursor: pointer;
   width: 60px;
   height: 46px;
   background: #448899;
@@ -337,13 +382,24 @@ main .page-one .text .but .icon i {
   color: #F8F8F8;
   font-size: 1.65rem;
 }
+main .page-one .text .but .icon:hover {
+  opacity: 0.8;
+  background-color: rgb(42, 40, 40);
+  border-radius: 5px;
+}
 main .page-one .text .searchcontainer {
   width: 400px;
   display: none;
+  z-index: 999;
 }
 @media (max-width: 550px) {
   main .page-one .text .searchcontainer {
-    width: 80%;
+    width: 83%;
+  }
+}
+@media (max-width: 410px) {
+  main .page-one .text .searchcontainer {
+    width: 90%;
   }
 }
 main .page-one .text .searchcontainer .searchForm {
@@ -360,25 +416,26 @@ main .page-one .text .searchcontainer .searchForm {
 }
 @media (max-width: 550px) {
   main .page-one .text .searchcontainer .searchForm {
-    width: 350px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
   }
 }
 @media (max-width: 410px) {
   main .page-one .text .searchcontainer .searchForm {
-    width: 310px;
     padding-right: 0px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
 }
 main .page-one .text .searchcontainer .searchForm .searchItem {
+  cursor: pointer;
   width: 120px;
   height: 40px;
-  padding: 10px 15px;
   gap: 4px;
   font-weight: 500;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 40px;
+  text-align: center;
   align-items: center;
 }
 @media (max-width: 550px) {
@@ -388,19 +445,21 @@ main .page-one .text .searchcontainer .searchForm .searchItem {
 }
 @media (max-width: 410px) {
   main .page-one .text .searchcontainer .searchForm .searchItem {
-    width: 80px;
-    padding: 10px 10px;
+    width: 70px;
   }
 }
 main .page-one .text .searchcontainer .searchForm .searchItem:hover {
-  width: 100%;
-  height: 100%;
   background-color: rgb(232, 232, 232);
   border-radius: 5px;
 }
 @media (max-width: 550px) {
   main .page-one .text .searchcontainer .searchForm .searchItem:hover {
     width: 96px;
+  }
+}
+@media (max-width: 410px) {
+  main .page-one .text .searchcontainer .searchForm .searchItem:hover {
+    width: 70px;
   }
 }
 main .container-twelve {
@@ -434,6 +493,7 @@ main .container-twelve .container-block {
   }
 }
 main .container-twelve .container-block .item {
+  cursor: pointer;
   width: 100%;
   height: 100%;
   outline: 1px solid rgb(200, 200, 200);
@@ -449,7 +509,7 @@ main .container-twelve .container-block .item .img-block {
      object-fit: cover; /*裁切縮放*/
   align-items: center;
   position: relative;
-  z-index: -50;
+  z-index: -999;
   border-right-color: #448899;
 }
 main .container-twelve .container-block .item .img-block p {
@@ -476,6 +536,10 @@ main .container-twelve .container-block .item .sort p {
   font-weight: 700;
   background-color: white;
   color: #757575;
+}
+main .container-twelve .container-block .item:hover {
+  border-radius: 5px;
+  opacity: 0.6;
 }
 
 footer {
