--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -4,6 +4,8 @@
     padding:0;                      //reset
     font-family: 'Noto Sans TC';    //網頁字體
     font-style: normal;             //網頁字體
+    border: none;
+    outline: none;
 }
 
 
@@ -87,6 +89,7 @@
                 position: relative;
                 // background-color: red;
                 left:75px;
+                cursor: pointer;
             }
 
             input{
@@ -108,6 +111,7 @@
                 top: 40px;
             }
             .signinBtn{
+                cursor: pointer;
                 position: relative;
                 top: 50px;
                 left:15px;
@@ -122,7 +126,12 @@
                 font-weight: 1000px;
                 color:white;
             }
+            .signinBtn:hover{
+                opacity: 0.8;
+                background-color:rgb(62, 61, 61);
+            }
             .signinCreateAccount{
+                cursor: pointer;
                 position: relative;
                 top: 60px;
                 // left:15px;
@@ -131,6 +140,9 @@
                 justify-content: center;
                 font-size: 16px;
                 font-weight: 1000px;
+            }
+            .signinCreateAccount:hover{
+                color:black;
             }
             .signinMessage{
                 position: relative;
@@ -185,6 +197,7 @@
             }
 
             .registerClose{
+                cursor: pointer;
                 position: relative;
                 // background-color: red;
                 left:75px;
@@ -214,6 +227,7 @@
                 top: 50px;
             }
             .registerBtn{
+                cursor: pointer;
                 position: relative;
                 top: 60px;
                 left:15px;
@@ -229,7 +243,13 @@
                 color:white;
                 border:0px
             }
+            .registerBtn:hover{
+                opacity: 0.7;
+                background-color:rgb(42, 40, 40);
+                border-radius: 5px;
+            }
             .registerSignInTo{
+                cursor: pointer;
                 position: relative;
                 top: 70px;
                 // left:15px;
@@ -239,7 +259,11 @@
                 font-size: 16px;
                 font-weight: 1000px;
             }
+            .registerSignInTo:hover{
+                color:black;
+            }
             .registerMessage{
+                cursor: pointer;
                 position: relative;
                 top: 80px;
                 display: none;
@@ -247,6 +271,9 @@
                 font-size: 16px;
                 font-weight: 1000px;
                 color:red;
+            }
+            .registerMessage:hover{
+                color:black;
             }
         }
     }
@@ -280,9 +307,9 @@ nav{
         }
 
         div.nav-bar-left{
-            width:50%;           
+            width:50%;
             p{
-                width:100%;
+                cursor: pointer;  
                 margin-top: 10px;
                 margin-bottom: 10px;
                 font-size: 30px;
@@ -292,17 +319,20 @@ nav{
                     font-size: 28px;
                 }
             }
+            p:hover{
+                opacity: 0.6;
+                background-color:rgb(225, 220, 220);
+                color:#080707;
+                border-radius: 5px;
+            }
         }
         div.nav-bar-right{
             width:50%;
             display:flex;
             justify-content: right;
-            
             p{
-                // background-color: red;
-                margin-top: 10px;
-                margin-bottom: 10px;
-                margin-right: 20px;
+                cursor: pointer;
+                margin: 10px;
                 font-size: 16px;
                 display:flex;    
                 align-items: center;/* 垂直置中 */
@@ -310,8 +340,16 @@ nav{
                 color:#666666;
                 font-weight:500;
                 @include screen410{
-                    margin-right:10px;
+                    margin:5px;
                 }
+                
+            }
+            P:hover{
+                opacity: 0.6;
+                background-color:rgb(225, 220, 220);
+                color:#080707;
+                font-weight: 600;
+                border-radius: 5px;
                 
             }
             .SigninRegister{
@@ -328,7 +366,6 @@ nav{
 
 
 main{
-    
     .page-one{
         width: 100%;
         height: 320px;
@@ -384,15 +421,18 @@ main{
                     font-size: 16px;
                     line-height: 13px;
                     color: #757575;
-                    padding: 15px 10px;
-                    border: none;
+                    padding: 15px 30px;
                     border-radius: 6px 0 0 6px;
-                    @include screen410(){
-                        width: 250px;
-                        
+                    @include screen550{
+                        padding: 15px 20px;    
+                    }
+                    @include screen410{
+                        width: 250px; 
+                        padding: 15px 8px;
                     }
                 }
                 .icon{
+                    cursor: pointer;
                     width: 60px;
                     height: 46px;
                     background: #448899;
@@ -405,19 +445,27 @@ main{
                         color: #F8F8F8;
                         font-size: 1.65rem;    
                     }
-                }   
+                }
+                .icon:hover{
+                    opacity: 0.8;
+                    background-color:rgb(42, 40, 40);
+                    border-radius: 5px;
+                    
+                }
             }
             //新增一個外層
             .searchcontainer{
                 width: 400px;
-                // height: 162px;
                 display:none;
-                // position:absolute;
-                // z-index: 100;
+                z-index: 999;
                 @include screen550{
-                    width: 80%;
+                    width: 83%;
+                }
+                @include screen410{
+                    width: 90%;
                 }
                 .searchForm{
+                    
                     width: 100%;
                     height: 100%;
                     display: grid;
@@ -429,11 +477,13 @@ main{
                     box-shadow: 0px 0px 20px #AABBCC;
                     background-color:  #FFFFFF;
                     @include screen550{
-                        width:350px;
+                        grid-template-columns: repeat(3,1fr);
+                        grid-template-rows: repeat(3 ,1fr);
+
                     }
 
                     @include screen410{
-                        width:310px;
+                        // width:90%;
                         padding-right:0px;
                         // box-shadow: 0px 0px 5px #AABBCC;
                         grid-template-columns: repeat(3,1fr);
@@ -441,253 +491,38 @@ main{
                     }
                     
                     .searchItem{
+                        cursor: pointer;
                         width: 120px;
                         height: 40px;
-                        padding: 10px 15px;
                         gap: 4px;
                         font-weight: 500;
                         font-size: 14px;
-                        line-height: 20px;
+                        line-height: 40px;
+                        text-align: center;
                         align-items: center;
                         @include screen550{
                             width:96px;
                         }
                         @include screen410{
-                            width:  80px;
-                            padding: 10px 10px;
+                            width:  70px;
                         }
                     
                     }
 
                     .searchItem:hover{
-                        width: 100%;
-                        height: 100%;
                         background-color: rgba(232, 232, 232, 1);
                         border-radius: 5px;
                         @include screen550{
                             width:96px;
                         }
+                        @include screen410{
+                            width:  70px;
+                        }
                     }
                 }
             }           
         } 
-        // .filmBackground{
-        //     width:100%;
-        //     height:100%;
-        //     background-color: black;
-        //     z-index: 100;
-        //     // position: absolute;
-        //     position:fixed;                 //固定在視窗同個位置，捲動時跟著移動
-        //     top:0;
-        //     opacity: 0.25;
-        //     display: none;
-        // }
-        // .signinBlock{
-        //     width:100%;
-        //     height:275px;
-        //     margin-top: 26px;
-        //     // background-color: #666666;
-        //     // opacity: 0.25;
-        //     position:fixed;
-        //     // position: absolute;
-        //     z-index: 101;
-        //     display: none;
-        //     // display: flex;
-        //     justify-content: center;
-            
-        //     .signinBackground{
-        //         // position: relative;
-        //         width:340px;
-        //         height:100%;
-        //         background-color: #448899;
-        //         border-radius:6px;
-        //         .signinContent{
-        //             width: 100%;
-        //             // height: 100%;
-        //             height:265px;
-        //             margin-top: 10px;
-        //             background-color: #FFFFFF;
-        //             border-radius:0 0 6px 6px;
-        //             .signinTitle{
-        //                 position: relative;
-        //                 top: 15px;
-        //                 width: 100%;
-        //                 height:27px;
-        //                 // background-color: black;
-        //                 display: flex;
-        //                 justify-content: center;
-        //                 color:#666666;
-        //                 font-weight: 1000;
-        //                 font-size: 24px;
-        //             }
-
-        //             .signinClose{
-        //                 position: relative;
-        //                 // background-color: red;
-        //                 left:75px;
-        //             }
-
-        //             input{
-        //                 width:310px;
-        //                 height:47px;
-        //                 left:15px;
-        //                 border-radius:5px;
-        //                 padding:15px;
-        //                 border:1px Gray solid;
-        //                 font-weight:600;
-                        
-        //             }
-        //             .signinEmail{
-        //                 position: relative;
-        //                 top: 30px;
-        //             }
-        //             .signinPassword{
-        //                 position: relative;
-        //                 top: 40px;
-        //             }
-        //             .signinBtn{
-        //                 position: relative;
-        //                 top: 50px;
-        //                 left:15px;
-        //                 width:310px;
-        //                 height:47px;
-        //                 background-color:#448899;
-        //                 border-radius:6px;
-        //                 display: flex;
-        //                 justify-content: center;
-        //                 align-items: center;
-        //                 font-size: 20px;
-        //                 font-weight: 1000px;
-        //                 color:white;
-        //             }
-        //             .signinCreateAccount{
-        //                 position: relative;
-        //                 top: 60px;
-        //                 // left:15px;
-        //                 color:#666666;
-        //                 display: flex;
-        //                 justify-content: center;
-        //                 font-size: 16px;
-        //                 font-weight: 1000px;
-        //             }
-        //             .signinMessage{
-        //                 position: relative;
-        //                 top: 40px;
-        //                 // display: flex;
-        //                 display: none;
-        //                 justify-content: center;
-        //                 font-size: 16px;
-        //                 font-weight: 1000px;
-        //                 color:red;
-        //             }
-        //         }
-        //     }
-        // }
-
-        // .registerBlock{
-        //     width:100%;
-        //     height:332px;
-        //     margin-top: 26px;
-        //     // background-color: #666666;
-        //     // position: absolute;
-        //     position:fixed;
-        //     z-index: 101;
-        //     display: none;
-        //     // display: flex;
-        //     justify-content: center;
-            
-        //     .registerBackground{
-        //         width:340px;
-        //         height:100%;
-        //         background-color: #448899;
-        //         border-radius:6px;
-        //         .registerContent{
-        //             width: 100%;
-        //             // height:350px;
-        //             height:322px;
-        //             margin-top: 10px;
-        //             background-color: #FFFFFF;
-        //             border-radius:0 0 6px 6px;
-        //             .registerTitle{
-        //                 position: relative;
-        //                 top: 15px;
-        //                 width: 100%;
-        //                 height:27px;
-        //                 // background-color: black;
-        //                 display: flex;
-        //                 justify-content: center;
-        //                 color:#666666;
-        //                 font-weight: 1000;
-        //                 font-size: 24px;
-        //             }
-
-        //             .registerClose{
-        //                 position: relative;
-        //                 // background-color: red;
-        //                 left:75px;
-        //             }
-
-        //             input{
-        //                 width:310px;
-        //                 height:47px;
-        //                 left:15px;
-        //                 border-radius:5px;
-        //                 padding:15px;
-        //                 border:1px Gray solid;
-        //                 font-weight:600;
-                        
-        //             }
-        //             .registerName{
-        //                 position: relative;
-        //                 top: 30px;
-        //             }
-
-        //             .registerEmail{
-        //                 position: relative;
-        //                 top: 40px;
-        //             }
-        //             .registerPassword{
-        //                 position: relative;
-        //                 top: 50px;
-        //             }
-        //             .registerBtn{
-        //                 position: relative;
-        //                 top: 60px;
-        //                 left:15px;
-        //                 width:310px;
-        //                 height:47px;
-        //                 background-color:#448899;
-        //                 border-radius:6px;
-        //                 display: flex;
-        //                 justify-content: center;
-        //                 align-items: center;
-        //                 font-size: 20px;
-        //                 font-weight: 1000px;
-        //                 color:white;
-        //                 border:0px
-        //             }
-        //             .registerSignInTo{
-        //                 position: relative;
-        //                 top: 70px;
-        //                 // left:15px;
-        //                 color:#666666;
-        //                 display: flex;
-        //                 justify-content: center;
-        //                 font-size: 16px;
-        //                 font-weight: 1000px;
-        //             }
-        //             .registerMessage{
-        //                 position: relative;
-        //                 top: 80px;
-        //                 display: none;
-        //                 justify-content: center;
-        //                 font-size: 16px;
-        //                 font-weight: 1000px;
-        //                 color:red;
-        //             }
-        //         }
-        //     }
-        // }
+ 
     }
 
     
@@ -722,6 +557,7 @@ main{
             }
                         
             .item{
+                cursor: pointer;
                 width:100%;
                 height: 100%;
                 outline:1px solid rgb(200, 200, 200);//不佔空間的border
@@ -732,12 +568,9 @@ main{
                     display: flex; 
                     object-position: center center;
                     object-fit:cover;   /*裁切縮放*/
-                    // object-fit: fill;
-                    // flex-wrap: wrap;
-                    // display: block;   
                     align-items: center;
                     position: relative;
-                    z-index: -50;
+                    z-index: -999;
                     border-right-color: #448899;
 
                     p{
@@ -768,15 +601,13 @@ main{
                         font-weight: 700;
                         background-color: white;
                         color:#757575;
-                        // padding:10px;
-                        // gap: 4px;
-                        // font-weight: 500;
-                        // font-size: 16px;
-                        // line-height: 40px;
-                        // color: #757575;
                     }
                 }
 
+            }
+            .item:hover{
+                border-radius: 5px;
+                opacity: 0.6;
             }
 
         }
