--- a/static/css/thankyou.css
+++ b/static/css/thankyou.css
@@ -14,6 +14,20 @@ main .thankYouPage div {
   margin-top: 5px;
   color: #757575;
 }
+main .errorPage {
+  display: none;
+  width: 90%;
+  height: 50px;
+  margin-top: 100px;
+  font-size: 26px;
+  font-weight: 1000;
+  align-items: center;
+  justify-content: center;
+}
+main .errorPage div {
+  text-align: center;
+  color: #757575;
+}
 
 .footerBefore {
   margin-top: 50px;
