--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -321,7 +321,7 @@ nav{
             }
             p:hover{
                 opacity: 0.6;
-                background-color:rgb(225, 220, 220);
+                // background-color:rgb(225, 220, 220);
                 color:#080707;
                 border-radius: 5px;
             }
