--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
     <nav>
         <div>
             <div class="nav-bar-left">
-                <p>台北一日遊</p>
+                <p class="navBackToHome">台北一日遊</p>
             </div>
             <div class="nav-bar-right">
                 <p class="reserveJourney">預定行程</p>
