--- a/templates/booking.html
+++ b/templates/booking.html
@@ -67,7 +67,7 @@
 
 
 {% block javascript %}
-<script src="../static/booking.js" defer></script>
+<script src="../static/setting.js" defer></script>
 <script src="https://js.tappaysdk.com/sdk/tpdirect/v5.14.0"></script>
-<script>TPDirect.setupSDK(126870, 'app_SAUPg4xuOEWyb4B2874iGEv8LT1xYmzsj87ChJ9wFFbAFwciRpUA5HJtn2DJ', 'sandbox')</script>
+<script src="../static/booking.js" defer></script>
 {% endblock %}
