--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
                 <p class="reserveJourney">預定行程</p>
                 <p class="SigninRegister">登入/註冊</p>
                 <p class="SignOut">登出</p>
+                <p class="member">會員中心</p>
             </div>
         </div>
     </nav>
