--- a/templates/member.html
+++ b/templates/member.html
@@ -9,43 +9,23 @@
 <main>
     <section class="all">
         <div class="informationBlock">
-            <div class="informationTitle">會員資料</div>
+            <!-- <div class="informationTitle">會員資料</div> -->
             <div class="informationContain">
-                <div>姓名：<input class="memberName" type="text" ></p>
-                <div>信箱：<input class="memberEmail" type="text" ></p>
-                <div>密碼：<input class="memberPassword" type="text" ></p>
-                <!-- <div class="memberNameTitle">姓名:<i class="memberName"></i></div>
-                <div class="memberEmailTitle">信箱:<i class="memberEmail"></i></div>
-                <div class="memberPasswordTitle">密碼:<i class="memberPassword"></i></div> -->
-                <div class="memberMessageTitle"><i class="memberMessage"></i></div>
-                <div class="changeInformationBTN">更改會員資料</div>
+                <div class="informationDetail">
+                    <div>會員資料</div>
+                    <div>姓名：<input class="memberName" type="text" ></div>
+                    <div>信箱：<input class="memberEmail" type="text" ></div>
+                    <div>密碼：<input class="memberPassword" id="floatingMemberPassword" type="password" ></div>
+                    <i id="checkEyeMember" class="fas fa-eye"></i>
+                    <div class="memberMessageTitle"><i class="memberMessage"></i></div>
+                    <div class="changeInformationBTN">變更上述資料</div>
+                </div>
             </div>
         </div>
 
-        <!-- <div class="orderBlock">
-            <div class="orderTitle">訂單查詢</div>
-            <div class="orderContain"></div>
-
-        </div> -->
     </section>
 
-    <!-- <section class="memberInformationPage">
-        <div class="information">
-            <div>會員資料</div>
-            <div class="memberName">姓名:</div>
-            <div class="memberEmail">信箱:</div>
-            <div class="memberPassword">密碼:</div>
-        </div>
-    </section> -->
-    
-    <!-- <section class="memberBookingPage">
-        <div class="information">
-            <div>會員資料</div>
-            <div class="memberName">姓名:</div>
-            <div class="memberEmail">信箱:</div>
-            <div class="memberPassword">密碼:</div>
-        </div>
-    </section> -->
+
 
 
 </main>
