--- a/static/css/index.css
+++ b/static/css/index.css
@@ -37,6 +37,7 @@
 }
 .signinBlock .signinBackground .signinContent {
   width: 100%;
+  position: relative;
   height: 265px;
   margin-top: 10px;
   background-color: #FFFFFF;
@@ -74,6 +75,17 @@
 .signinBlock .signinBackground .signinContent .signinPassword {
   position: relative;
   top: 40px;
+}
+.signinBlock .signinBackground .signinContent #checkEyeSignin {
+  cursor: pointer;
+  position: absolute;
+  top: 125px;
+  right: 10%;
+  color: #666666;
+}
+.signinBlock .signinBackground .signinContent #checkEyeSignin:hover {
+  opacity: 0.5;
+  color: rgb(62, 61, 61);
 }
 .signinBlock .signinBackground .signinContent .signinBtn {
   cursor: pointer;
@@ -139,6 +151,7 @@
   margin-top: 10px;
   background-color: #FFFFFF;
   border-radius: 0 0 6px 6px;
+  position: relative;
 }
 .registerBlock .registerBackground .registerContent .registerTitle {
   position: relative;
@@ -199,6 +212,17 @@
   background-color: rgb(42, 40, 40);
   border-radius: 5px;
 }
+.registerBlock .registerBackground .registerContent #checkEyeRegister {
+  cursor: pointer;
+  position: absolute;
+  top: 185px;
+  right: 10%;
+  color: #666666;
+}
+.registerBlock .registerBackground .registerContent #checkEyeRegister:hover {
+  opacity: 0.5;
+  color: rgb(62, 61, 61);
+}
 .registerBlock .registerBackground .registerContent .registerSignInTo {
   cursor: pointer;
   position: relative;
@@ -250,7 +274,7 @@ nav div div.nav-bar-left {
 }
 @media (max-width: 550px) {
   nav div div.nav-bar-left {
-    width: 40%;
+    width: 45%;
   }
 }
 nav div div.nav-bar-left p {
@@ -283,7 +307,7 @@ nav div div.nav-bar-right {
 }
 @media (max-width: 550px) {
   nav div div.nav-bar-right {
-    width: 60%;
+    width: 55%;
   }
 }
 nav div div.nav-bar-right p {
@@ -303,7 +327,8 @@ nav div div.nav-bar-right p {
 }
 @media (max-width: 410px) {
   nav div div.nav-bar-right p {
-    margin: 5px;
+    margin: 2px;
+    font-size: 14px;
   }
 }
 nav div div.nav-bar-right P:hover {
@@ -588,56 +613,4 @@ footer p {
   font-size: 16px;
   line-height: 104px;
   text-align: center;
-}
-
-.loading {
-  opacity: 0;
-  display: flex;
-  position: fixed;
-  bottom: 100px;
-  left: 50%;
-  transform: translateX(-50%);
-  transition: opacity 0.3s ease-in;
-}
-
-.show {
-  opacity: 1;
-}
-
-.ball {
-  background-color: #777;
-  border-radius: 50%;
-  margin: 5px;
-  height: 10px;
-  width: 10px;
-  -webkit-animation: jump 0.5s ease-in infinite;
-          animation: jump 0.5s ease-in infinite;
-}
-
-.ball:nth-of-type(2) {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
-}
-
-.ball:nth-of-type(3) {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-}
-
-@-webkit-keyframes jump {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-}
-
-@keyframes jump {
-  0%, 100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
 }/*# sourceMappingURL=index.css.map */
