--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -40,7 +40,6 @@
     height:100%;
     background-color: black;
     z-index: 100;
-    // position: absolute;
     position:fixed;                 //固定在視窗同個位置，捲動時跟著移動
     top:0;
     opacity: 0.25;
@@ -50,24 +49,19 @@
     width:100%;
     height:275px;
     top: 80px;
-    // background-color: #666666;
-    // opacity: 0.25;
     position:fixed;
-    // position: absolute;
     z-index: 101;
     display: none;
-    // display: flex;
     justify-content: center;
     
     .signinBackground{
-        // position: relative;
         width:340px;
         height:100%;
         background-color: #448899;
         border-radius:6px;
         .signinContent{
             width: 100%;
-            // height: 100%;
+            position: relative;
             height:265px;
             margin-top: 10px;
             background-color: #FFFFFF;
@@ -77,7 +71,6 @@
                 top: 15px;
                 width: 100%;
                 height:27px;
-                // background-color: black;
                 display: flex;
                 justify-content: center;
                 color:#666666;
@@ -87,7 +80,6 @@
 
             .signinClose{
                 position: relative;
-                // background-color: red;
                 left:75px;
                 cursor: pointer;
             }
@@ -109,6 +101,17 @@
             .signinPassword{
                 position: relative;
                 top: 40px;
+            }
+            #checkEyeSignin {
+                cursor: pointer;
+                position: absolute;
+                top:125px;
+                right: 10%;
+                color:#666666;
+            }
+            #checkEyeSignin:hover{
+                opacity: 0.5;
+                color:rgb(62, 61, 61);
             }
             .signinBtn{
                 cursor: pointer;
@@ -134,7 +137,6 @@
                 cursor: pointer;
                 position: relative;
                 top: 60px;
-                // left:15px;
                 color:#666666;
                 display: flex;
                 justify-content: center;
@@ -147,7 +149,6 @@
             .signinMessage{
                 position: relative;
                 top: 40px;
-                // display: flex;
                 display: none;
                 justify-content: center;
                 font-size: 16px;
@@ -161,14 +162,10 @@
 .registerBlock{
     width:100%;
     height:332px;
-    // margin-top: 10px;
-    top: 80px;
-    // background-color: #666666;
-    // position: absolute;
+    top: 80px;;
     position:fixed;
     z-index: 101;
     display: none;
-    // display: flex;
     justify-content: center;
     
     .registerBackground{
@@ -178,17 +175,16 @@
         border-radius:6px;
         .registerContent{
             width: 100%;
-            // height:350px;
             height:322px;
             margin-top: 10px;
             background-color: #FFFFFF;
             border-radius:0 0 6px 6px;
+            position: relative;
             .registerTitle{
                 position: relative;
                 top: 15px;
                 width: 100%;
                 height:27px;
-                // background-color: black;
                 display: flex;
                 justify-content: center;
                 color:#666666;
@@ -199,7 +195,6 @@
             .registerClose{
                 cursor: pointer;
                 position: relative;
-                // background-color: red;
                 left:75px;
             }
 
@@ -248,11 +243,21 @@
                 background-color:rgb(42, 40, 40);
                 border-radius: 5px;
             }
+            #checkEyeRegister {
+                cursor: pointer;
+                position: absolute;
+                top:185px;
+                right: 10%;
+                color:#666666;
+            }
+            #checkEyeRegister:hover{
+                opacity: 0.5;
+                color:rgb(62, 61, 61);
+            }
             .registerSignInTo{
                 cursor: pointer;
                 position: relative;
                 top: 70px;
-                // left:15px;
                 color:#666666;
                 display: flex;
                 justify-content: center;
@@ -295,12 +300,8 @@ nav{
     div{
         display:flex;
         width:1200px;
-        // width:75%;
         justify-content: space-between; //水平分散
         margin: auto;                   //auto就是置中
-        // position: absolute;
-        // z-index: 2;
-        // background-color: yellow;
         
         @include screen1250{
             width:90%;
@@ -309,7 +310,7 @@ nav{
         div.nav-bar-left{
             width:50%;
             @include screen550{
-                width:40%;
+                width:45%;
             }
             p{
                 cursor: pointer;  
@@ -337,7 +338,7 @@ nav{
             display:flex;
             justify-content: right;
             @include screen550{
-                width:60%;
+                width:55%;
             }
             p{
                 cursor: pointer;
@@ -352,7 +353,8 @@ nav{
                     margin:5px;
                 }
                 @include screen410{
-                    margin:5px;
+                    margin:2px;
+                    font-size: 14px;
                 }
                 
             }
@@ -382,9 +384,7 @@ main{
         width: 100%;
         height: 320px;
         margin-top: 54px;
-        // position: relative;
         background-image: url(../img/welcome.png);
-        // background-repeat: no-repeat;
         background-size: cover;
         object-position: 100% 0;
         
@@ -395,7 +395,6 @@ main{
             margin-top: 85px;
             left:50%;
             transform:translate(-50%,0%);
-            // background-color: red;
 
             @include screen1250{
                 width:90%;
@@ -422,7 +421,6 @@ main{
                 width: 460px;
                 height: 46px;
                 display: flex;
-                // background-color: black;
                 @include screen550{
                     width: 95%;
                 }
@@ -495,9 +493,7 @@ main{
                     }
 
                     @include screen410{
-                        // width:90%;
                         padding-right:0px;
-                        // box-shadow: 0px 0px 5px #AABBCC;
                         grid-template-columns: repeat(3,1fr);
                         grid-template-rows: repeat(3 ,1fr);
                     }
@@ -587,7 +583,6 @@ main{
 
                     p{
                         width: 100%;
-                        // height: 20vh;
                         display: inline-block;  //換行搭配
                         max-height: 10vh;       //換行搭配
                         position:absolute;
@@ -659,45 +654,3 @@ footer{
     }
 }
 
-
-
-.loading {
-    opacity: 0;
-    display: flex;
-    position: fixed;
-    bottom: 100px;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: opacity .3s ease-in;
-}
-
-.show {
-    opacity: 1;
-}
-
-.ball {
-    background-color: #777;
-    border-radius: 50%;
-    margin: 5px;
-    height: 10px;
-    width: 10px;
-    animation: jump .5s ease-in infinite;
-}
-
-.ball:nth-of-type(2) {
-    animation-delay: 0.1s;
-}
-
-.ball:nth-of-type(3) {
-    animation-delay: 0.2s;
-}
-
-@keyframes jump {
-    0%, 100% {
-        transform: translateY(0);
-    }
-    
-    50% {
-        transform: translateY(-10px);
-    }
-}
