--- a/static/css/member.css
+++ b/static/css/member.css
@@ -1,3 +1,14 @@
+@charset "UTF-8";
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Sans TC";
+  font-style: normal;
+  border: none;
+  outline: none;
+}
+
 main {
   display: flex;
   justify-content: center;
@@ -5,7 +16,6 @@ main {
 main .all {
   margin-top: 80px;
   width: 1200px;
-  background-color: antiquewhite;
 }
 @media (max-width: 1250px) {
   main .all {
@@ -14,25 +24,28 @@ main .all {
 }
 main .all .informationBlock {
   width: 100%;
-  background-color: antiquewhite;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 1000;
 }
 main .all .informationBlock .informationTitle {
   height: 50px;
   line-height: 50px;
   text-align: center;
-  background-color: #448899;
 }
 main .all .informationBlock .informationContain {
-  background-color: rgb(77, 77, 79);
+  display: flex;
+  justify-content: center;
 }
-main .all .informationBlock .informationContain div {
+main .all .informationBlock .informationContain .informationDetail {
+  width: 360px;
+  border-radius: 5px;
+  position: relative;
+}
+main .all .informationBlock .informationContain .informationDetail div {
   line-height: 38px;
   text-align: center;
-  color: white;
 }
-main .all .informationBlock .informationContain div input {
+main .all .informationBlock .informationContain .informationDetail div input {
   margin: 5px;
   height: 38px;
   width: 200px;
@@ -42,6 +55,57 @@ main .all .informationBlock .informationContain div input {
   border: 2px #E8E8E8 solid;
   border-radius: 5px;
 }
-main .all .informationBlock .informationContain .changeInformationBTN {
-  background-color: rgb(147, 147, 149);
+main .all .informationBlock .informationContain .informationDetail #checkEyeMember {
+  cursor: pointer;
+  position: absolute;
+  color: gray;
+  top: 145px;
+  right: 20%;
+}
+main .all .informationBlock .informationContain .informationDetail #checkEyeMember:hover {
+  opacity: 0.5;
+  color: rgb(62, 61, 61);
+}
+main .all .informationBlock .informationContain .informationDetail .changeInformationBTN {
+  cursor: pointer;
+}
+main .all .informationBlock .informationContain .informationDetail .changeInformationBTN:hover {
+  border-radius: 5px;
+  opacity: 0.6;
+}
+main .all .orderBlock {
+  margin-top: 50px;
+  width: 100%;
+  height: 200px;
+  font-size: 20px;
+  font-weight: 1000;
+  background-color: burlywood;
+}
+main .all .orderBlock .orderTitle {
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background-color: #448899;
+}
+main .all .orderBlock .messageDownBlock {
+  height: 220px;
+  width: 960px;
+  background-color: red;
+  display: flex;
+}
+main .all .orderBlock .messageDownBlock .imageBlock {
+  width: 266px;
+  height: 200px;
+  display: flex;
+  margin-top: 5px;
+  -o-object-position: center center;
+     object-position: center center;
+  -o-object-fit: cover;
+     object-fit: cover; /*裁切縮放*/
+  background-color: rgb(249, 249, 203);
+}
+main .all .orderBlock .messageDownBlock .attractionIntroduceBlock {
+  margin-left: 22px;
+  width: 100%;
+  background-color: wheat;
 }/*# sourceMappingURL=member.css.map */
