--- a/static/css/thankyou.css
+++ b/static/css/thankyou.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Sans TC";
+  font-style: normal;
+  border: none;
+  outline: none;
+}
+
 main {
   display: flex;
   justify-content: center;
