--- a/static/css/thankyou.scss
+++ b/static/css/thankyou.scss
@@ -1,21 +1,27 @@
+*{
+    box-sizing:border-box;          //reset
+    margin:0;                       //reset
+    padding:0;                      //reset
+    font-family: 'Noto Sans TC';    //網頁字體
+    font-style: normal;             //網頁字體
+    border: none;
+    outline: none;
+}
+
 
 main{
     display: flex;
     justify-content: center;
-    // background-color: yellowgreen;
     .thankYouPage{
         width:90%;
-        // height: 100px;
         margin-top: 100px;
         font-size: 16px;
         font-weight: 1000;
-        // background-color: #448899;
         padding:10px;
         div{
             text-align: center;
             margin-top: 5px;
             color:#757575;
-            // background-color: blue;
         }
         
     }
@@ -38,7 +44,6 @@ main{
 
 
 .footerBefore{
-    // display: none;
     margin-top: 50px;
     width: 100%;
     height: 83vh;
