--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,11 @@
         <div class="signinBlock">
             <div class="signinBackground">
                 <div class="signinContent">
+                    
                     <div class="signinTitle">登入會員帳號<i class="fa-solid fa-xmark signinClose"></i></div>
                     <input class="signinEmail" type="email" name="" placeholder="輸入電子信箱" />
-                    <input class="signinPassword" type="password" name="" placeholder="輸入密碼" />
+                    <input class="signinPassword" id="floatingSigninPassword" type="password" name="" placeholder="輸入密碼" />
+                    <i id="checkEyeSignin" class="fas fa-eye"></i>
                     <div class="signinBtn">登入帳戶</div>
                     <div class="signinCreateAccount">還沒有帳戶？點此註冊</div>
                     <div class="signinMessage">登入成功</div>
@@ -34,7 +36,8 @@
                     <div class="registerTitle">註冊會員帳號<i class="fa-solid fa-xmark registerClose"></i></div>
                     <input class="registerName" type="text" name="registerName" placeholder="輸入姓名" />
                     <input class="registerEmail" type="email" name="registerEmail" placeholder="輸入電子信箱" />
-                    <input class="registerPassword" type="password" name="registerPassword" placeholder="輸入密碼" />
+                    <input class="registerPassword" id="floatingRegisterPassword" type="password" name="registerPassword" placeholder="輸入密碼" />
+                    <i id="checkEyeRegister" class="fas fa-eye"></i>
                     <div class="registerBtn">註冊新帳戶</div>   
                     <div class="registerSignInTo">已經有帳戶了？點此登入</div>
                     <div class="registerMessage">註冊失敗，點此重新註冊</div>
